Fixed detailed post pager button wrapping issues on smaller responsive layout

--- a/core/static/roca/sass/roca.scss
+++ b/core/static/roca/sass/roca.scss
@@ -7,6 +7,14 @@ Author: jason
 */
 
 @media(max-width: 767px) {
+	ul.pager {
+		li {
+			float: left;
+			display: block;
+			padding: 5px 5px 5px 0;
+		}
+	}
+
 	body {
 		padding-right:0;
 		padding-left:0;
